Design tweaks, rewrote bio, updated work, refactored code

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,8 +33,8 @@
 <!-- Nav -->
         <nav>
           <ul>
+            <li><a href="/" title="Home">Home</a></li>
             <li><a href="/writing.html" title="Writing">Writing</a></li>
-            <li><a href="http://muse.muke.me" title="Musing">Musing</a></li>
             <li><a href="/info.html" title="Info">Info</a></li>
           </ul>
         </nav>
@@ -48,10 +48,10 @@
           <em>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Try Not to Steal it License</a>.</em>
         </div>
         <div>
-          <ul>
-            <li><a href="https://twitter.com/mukealicious" class="ss-twitter right">Twitter</a></li>
-            <li><a href="mailto:mikey@muke.me?subject=Yo Mukey!" class="ss-mail right">Contact</a></li>
-            <li><a href="http://feeds.feedburner.com/MikeyWills" class="ss-rss right">RSS Feed</a></li>
+          <ul class="social">
+            <li><a href="https://twitter.com/mukealicious" class="ss-twitter right"></a></li>
+            <li><a href="mailto:mikey@muke.me?subject=Yo Mukey!" class="ss-mail right"></a></li>
+            <li><a href="http://feeds.feedburner.com/MikeyWills" class="ss-rss right"></a></li>
           </ul>
         </div>
       </footer>
