--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -44,8 +44,10 @@ img#logo {
 }
 
 nav {
-  @include adjust-font-size-to(24px);
+  @include adjust-font-size-to(14px);
   line-height: 48px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
   border-bottom: 1px dashed $secondary;
   margin-bottom: 1em;
   ul li {
@@ -73,6 +75,12 @@ footer {
       text-align: right;
     }
   }
+  .social {
+    font-size: 77.77%;
+    li {
+      display: inline-block;
+    }
+  }
   span {
     display: block;
   }
@@ -87,6 +95,7 @@ footer {
 [class^="ss-"].right:after, [class*=" ss-"].right:after,
 [class^="ss-"][class*=" ss-social"].right:after, [class*=" ss-"][class*=" ss-social"].right:after {
   margin-left: 0.5em;
+  vertical-align: middle;
 }
 
 
@@ -94,18 +103,29 @@ footer {
    Home Page
 -------------------------------------------------------------------- */
 
-section.home img {
+.poster-print {
+  @include background(image-url("paper-clip.jpg")center center no-repeat);
+  background-size: 100%;
   margin-bottom: 1em;
+  width: 100%;
+  img {
+    width: 70%;
+    padding: 17% 15%;
+  }
 }
 
 article.hi {
   text-align: center;
+  padding-bottom: 1em;
   h1 {
     margin-bottom: 0;
   }
   h2 {
     font-style: italic;
-    @include dash-tail($golden-sm);
+//    @include dash-tail($golden-sm);
+  }
+  a {
+    text-align: right;
   }
 }
 
@@ -119,11 +139,14 @@ article.hi {
   @include span-columns(12 omega);
   @include dash-tail(100%);
   text-align: center;
-  h1, h2 {
+  h1 {
+    @include animation(colorz 60s infinite);
+  }
+  h2 {
+    @include text-shadow($grey-shdw 0 -1px 0);
+    color: $grey;
     display: block;
     width: 100%;
-    color: $grey;
-    @include text-shadow($grey-shdw 0 -1px 0);
   }
   h2 {
     @include transition-duration(0.2s);
@@ -135,8 +158,14 @@ article.hi {
       }
     }
   }
-  img.face {
+  div.mikey-image {
+    @include background(image-url("mikeyface.png")center center no-repeat);
+    @include animation(bg-colorz 60s infinite);
+    background-size: 11em 11em;
     width: 11em;
+    height: 11em;
+    border-radius: 6em;
+    margin: 0 auto 1em auto;
   }
   p {
     @include leader();
@@ -170,11 +199,6 @@ a.ss-write:before {
   @include span-columns(6);
   &:nth-child(odd) { @include omega; } // every second project completes a row.
   @include leader(0.5);
-  opacity: 0.66;
-  @include transition-duration(0.2s);
-  &:hover {
-    opacity: 1;
-  }
   h4 {
     font-family: $longform;
     line-height: 1;
@@ -184,6 +208,13 @@ a.ss-write:before {
   .sub {
     font-family: $title;
     font-style: normal;
+  }
+  img{
+    opacity: 0.66;
+    @include transition-duration(0.2s);
+    &:hover {
+      opacity: 1;
+    }
   }
 }
 
@@ -198,9 +229,10 @@ article.short.post {
 }
 
 h1.post-title {
+//  @include text-shadow($grey-shdw 0px -1px 0);  
+  @include animation(colorz 60s infinite);
   text-align: center;
-  color: $grey;
-  @include text-shadow($grey-shdw 0px -1px 0);
+  margin-top: 0.075em;
 }
 
 span.timestamp {
@@ -246,7 +278,7 @@ ul.recent-posts {
     border-bottom: 1px solid $grey;
     padding: 0.25em 0;
     &:hover {
-      background: $primary;
+      background: $secondarylt;
       color: $black;
       padding-left: 1em;
       padding-right: 1em;
@@ -256,6 +288,8 @@ ul.recent-posts {
 
 span.title{
   float: left;
+  font-family: $title;
+  font-weight: 600;
 }
 span.date {
   float: right;
@@ -289,12 +323,6 @@ blockquote {
 
 article ul {
   @include trailer();
-  a {
-    color: $secondary;
-    &:hover {
-      text-decoration: underline;
-    }
-  }
 }
 
 code {
@@ -340,9 +368,11 @@ code {
   .project {
   // Recent projects go to full width one column layout and no opacity hover state
     @include span-columns(12 omega);
-    opacity: 1;
     margin: 1.25em 0;
     text-align: center;
+    img {
+      opacity: 1;
+    }
   }
 // Make Recent Posts date go under title
   span.date, span.title {
