--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -63,8 +63,8 @@ nav {
 
 footer {
   @include rhythm(1, 0.75, 1, 1);
-  @include adjust-font-size-to(18px);
-  @include reset-baseline;
+  font-size: 75%;
+  line-height: 1.3;
   border-top: 1px dashed $secondary;
   font-family: $title;
   color: $grey-shdw;
@@ -76,7 +76,6 @@ footer {
     }
   }
   .social {
-    font-size: 77.77%;
     li {
       display: inline-block;
     }
@@ -392,5 +391,8 @@ code {
   @include establish-baseline;
   .container {
     padding: 0 0.75em;
+  }
+  h1 {
+    font-size: 200%;
   }
 }
